Add array removal

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
               <span class="actions expanded button-group">
                 <button type="button" class="remove button alert">Remove</button>
                 <button type="button" class="promote button success">HYPE</button>
+                <button type="button" class="button info">Up</button>
+                <button type="button" class="button info">Down</button>                
               </span>
             </li>
           </ul>
