Add icons using FontAwesome

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="C:\Users\Acer\Desktop\XTERN\megaroster\megaroster\font-awesome-4.7.0\font-awesome-4.7.0\css\font-awesome.min.css">
   </head>
   <body>
     <div class="row">
@@ -35,10 +36,10 @@
             <li class="student template">
               <span class="student-name"></span>
               <span class="actions expanded button-group">
-                <button type="button" class="remove button alert">Remove</button>
-                <button type="button" class="promote button success">HYPE</button>
-                <button type="button" class="up button info">Up</button>
-                <button type="button" class="down button info">Down</button>                
+                <button type="button" class="remove button alert"><i class="fa fa-trash-o"></i></button>
+                <button type="button" class="promote button success"><i class="fa fa-star-o"></i></button>
+                <button type="button" class="up button info"><i class="fa fa-arrow-up"></i></button>
+                <button type="button" class="down button info"><i class="fa fa-arrow-down"></i></button>                
               </span>
             </li>
           </ul>
